# PicoTemplateApp

./: AboutDialog.qml  AboutDialogForm.ui.qml  CMakeLists.txt  MobileFileDialog.qml  MobileFileDialogForm.ui.qml  README.md  SettingsDialogForm.ui.qml  SupportDialog.qml  SupportDialogForm.ui.qml  applicationdata.cpp  applicationdata.h  applicationui.cpp  main.cpp  main.qml  pico.pro  pico_de_DE.qm  pico_de_DE.ts  qml.qrc  qtquickcontrols2.conf  shareutils.cpp  storageaccess.cpp
.github/workflows/: Linux.yml  MacOS.yml  Windows.yml  wasm.yml
android/: AndroidManifest.xml  androidshareutils.cpp  androidshareutils.hpp
android/res/xml/: filepaths.xml
android/src/de/mneuroth/activity/sharex/: QShareActivity.java
android/src/de/mneuroth/utils/: QShareUtils.java  QStorageAccess.java
